# gen-hyre-csv

./: .gitignore  MD_PREPARATION_GUIDE.md  README.md  aptitude_all_questions.csv  base_img_s3.py  converted_output.csv  docs-ids.txt  fix_csv_newlines.py  get_and_save_csv.py  main.py  md_to_csv_ai.py  parse_md_questions copy.py  parse_md_questions.py  parse_questions.py  parse_txt_questions.py  pyproject.toml  question-example.csv  questions.csv  test_parse.py  upload_csv_to_gsheets.py
new-ai-converter/: README.md  pyproject.toml
new-ai-converter/config/: default.yaml  preprocessors.yaml  providers.yaml
new-ai-converter/src/: __init__.py
new-ai-converter/src/ai_md_to_csv_converter/: __main__.py  main.py
new-ai-converter/src/ai_md_to_csv_converter/core/: config.py  pipeline.py
new-ai-converter/src/ai_md_to_csv_converter/models/: results.py
new-ai-converter/src/ai_md_to_csv_converter/postprocessors/: __init__.py  csv_cleaner.py  factory.py
new-ai-converter/src/ai_md_to_csv_converter/preprocessors/: factory.py  (+3 more)
new-ai-converter/src/core/: __init__.py  config.py  exceptions.py
new-ai-converter/src/fixers/: __init__.py  ai_csv_fixer.py  base.py  factory.py
new-ai-converter/src/models/: __init__.py
new-ai-converter/src/postprocessors/: base.py
new-ai-converter/src/preprocessors/: __init__.py  base.py  md_formatter.py
new-ai-converter/src/providers/: __init__.py  factory.py
new-ai-converter/src/utils/: retry.py
new-ai-converter/src/validators/: js_verify_wrapper.py
new-ai-converter/templates/prompts/: conversion_prompt.txt  system_prompt.txt
(+197 files in other folders)
