[project]
name = "hyrenet-question-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.42",
    "doc-to-md-cli>=0.1.2",
    "fastapi>=0.115.0",
    "groq>=1.0.0",
    "gspread>=6.2.1",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.32.0",
]
