[project]
name = "ai-md-to-csv-converter"
version = "0.1.0"
description = "AI-powered Markdown to CSV converter with preprocessing and verification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "groq>=0.5.0",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
ai-converter = "ai_md_to_csv_converter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ✅ NEW: PEP 735 dependency groups
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
